--- a/IdeaProjects/jspring/src/main/resources/templates/register.html
+++ b/IdeaProjects/jspring/src/main/resources/templates/register.html
@@ -7,7 +7,10 @@
 <body>
 
 <a href="/" th:href="@{/}">Home</a>
-<a href="/singer/register" th:href="@{/singer/register}">Add Singer</a>
+<a href="/user/registeru" th:href="@{/user/registeru}">Register User</a>
+<a href="/user/loginu" th:href="@{/user/loginu}">Login</a>
+<a href="/user/logout" th:href="@{/user/logout}">Logout</a>
+
 
 
 <h2>Add Singer</h2>
